--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,12 @@
     <string name="general">GENERAL</string>
     <string name="system">SYSTEM</string>
     <string name="label">HeiDetteErEtHint</string>
+
+    <!-- Login/Register -->
+    <string name="loginRegister_username">Username Icon</string>
+    <string name="login">Login</string>
     <string name="username">Username</string>
+    <string name="password">Password</string>
+
 
 </resources>
