--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,23 @@
     <string name="ForgotPassword">Forgot Password?</string>
     <string name="rememberMe">Remember me</string>
 
+    <!-- Intro Slider -->
+    <string name="intro_slider_next">NEXT</string>
+    <string name="intro_slider_skip">SKIP</string>
+    <string name="intro_slider_finish">FINISH</string>
 
+    <string name="intro_slider_slide1_title">Title for Slide 1</string>
+    <string name="intro_slider_slide1_desc">Description for Slide 1</string>
+
+    <string name="intro_slider_slide2_title">Title for Slide 2</string>
+    <string name="intro_slider_slide2_desc">Description for Slide 2</string>
+
+    <string name="intro_slider_slide3_title">Title for Slide 3</string>
+    <string name="intro_slider_slide3_desc">Description for Slide 3</string>
+
+    <string name="intro_slider_slide4_title">Title for Slide 4</string>
+    <string name="intro_slider_slide4_desc">Description for Slide 4</string>
+
+    <string name="intro_slider_redo_desc">To see the introduction at a later time, goto Settings -> Apps -> Checket -> Clear Data</string>
+    <string name="intro_slider_redo">Redo introduction</string>
 </resources>
