Lagt inn visning av eposten til innlogget bruker i Nav Drawer, viser også nå Logout med funksjonalitet når innlogget, oppdatert ID til både

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="intro_slider_redo">Redo introduction</string>
 
     <string name="LoginRegisterActivity_wait">Please wait</string>
+    <string name="txt_email_placeholder">User not logged in</string>
 </resources>
