--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,13 +55,18 @@
     <string name="intro_slider_slide4_title">Creating a new user</string>
     <string name="intro_slider_slide4_desc">By creating a new user you can sync your tasks and progress across multiple devices!</string>
 
-    <string name="intro_slider_redo_desc">To see the introduction at a later time, goto Settings -> Apps -> Checket -> Clear Data</string>
-    <string name="intro_slider_redo">Redo introduction</string>
-
     <!-- Info and placeholders used specifically in Java programming -->
     <string name="LoginRegisterActivity_wait">Please wait</string>
+
     <string name="dialog_logout_title">Logout</string>
     <string name="dialog_logout_msg">Are you sure you want to logout? Tasks and achievements will no longer be synced across your devices</string>
     <string name="dialog_logout_pos">Yes</string>
     <string name="dialog_logout_neg">No</string>
+
+    <string name="dialog_intro_title">Introduction</string>
+    <string name="dialog_intro_msg">Are you sure you want to redo the introduction?</string>
+    <string name="dialog_intro_pos">Yes</string>
+    <string name="dialog_intro_neg">No</string>
+    <string name="settings_redo_title">Redo intro</string>
+    <string name="settings_redo_desc">Click me to redo the introduction</string>
 </resources>
