--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,15 @@
     <string name="rememberMe">Remember me</string>
     <string name="NoAccount">No account yet? Create one</string>
 
+    <!-- SignUp -->
+    <string name="signInText">Sign in to continue</string>
+    <string name="SignUpText">Sign up to begin your tasks</string>
+    <string name="SignUp">Sign up</string>
+    <string name="GotAccount">Already have an account? Login</string>
+    <string name="prompt_reenter_pw">Re-Enter Password</string>
+    <string name="helperTextInp">Required*</string>
+
+
     <!-- Intro Slider -->
     <string name="intro_slider_next">NEXT</string>
     <string name="intro_slider_skip">SKIP</string>
@@ -57,7 +66,7 @@
     <string name="intro_slider_slide4_desc">By creating a new user you can sync your tasks and progress across multiple devices!</string>
 
     <!-- Info and placeholders used specifically in Java programming -->
-    <string name="LoginRegisterActivity_wait">Please wait</string>
+    <string name="Activity_wait">Please wait</string>
 
     <string name="dialog_logout_title">Logout</string>
     <string name="dialog_logout_msg">Are you sure you want to logout? Tasks and achievements will no longer be synced across your devices</string>
@@ -74,7 +83,5 @@
     <!-- Preference keys -->
     <string name="key_IsFirstTime">IsFirstTime</string>
     <string name="logo">Checket</string>
-    <string name="signInText">Sign in to continue</string>
-    <string name="SignUpText">Sign up to begin your tasks</string>
-    <string name="SignUp">Sign up</string>
+
 </resources>
