ProfileActivity.java kan klikkes på gjennom nav menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,12 @@
     <string name="prompt_reenter_pw">Re-Enter Password</string>
     <string name="helperTextInp">Required*</string>
 
+    <!-- Profile -->
+    <string name="Profile">Profile</string>
+
+    <!-- Edit Profile -->
+    <string name="EditProfile">Edit Profile</string>
+
 
     <!-- Intro Slider -->
     <string name="intro_slider_next">NEXT</string>
