Profil satt i gang. Gjort klar farger på colors.xml, lagt til circle_border, circle, og gradient. Profil header inneholder nå sirkel for bilde.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
 
     <!-- Profile -->
     <string name="Profile">Profile</string>
+    <string name="twitterUsername">\@joeytribbiani</string>
 
     <!-- Edit Profile -->
     <string name="EditProfile">Edit Profile</string>
