--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,7 @@
     <string name="key_IsFirstTime">IsFirstTime</string>
     <string name="logo">Checket</string>
 
+    <!-- Tasks -->
     <string name="main_header">Upcoming tasks</string>
     <string name="new_task">New task</string>
     <string name="category">Category</string>
@@ -102,4 +103,16 @@
     <string name="tasks_header">Tasks</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="input">Input</string>
+
+    <string-array name="categories">
+        <item>Cleaning</item>
+        <item>Exercise</item>
+        <item>Gardening</item>
+        <item>Housekeeping</item>
+        <item>Miscellaneous</item>
+        <item>Shopping</item>
+        <item>Social</item>
+        <item>Sports</item>
+    </string-array>
 </resources>
