--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,5 +121,7 @@
     <!-- Achievements -->
     <string name="ach_unlockedAchievements">Unlocked achievements</string>
     <string name="ach_lockedAchievements">Locked achievements</string>
+    <string name="ach_unlockedAchievements_desc">A tab that will show all the unlocked achievements</string>
+    <string name="ach_lockedAchievements_desc">A tab that will show all the locked achievements</string>
 
 </resources>
