--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,7 @@
     <string name="input">Input</string>
 
     <string-array name="categories">
+        <item> </item>
         <item>Cleaning</item>
         <item>Exercise</item>
         <item>Gardening</item>
