Work in progress med visning av Brukernavn i profil

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
 
     <!-- Profile -->
     <string name="Profile">Profile</string>
+    <string name="txt_username_placeholder">Username</string>
 
     <!-- Edit Profile -->
     <string name="EditProfile">Edit Profile</string>
