--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
 
     <!-- Profile -->
     <string name="Profile">Profile</string>
-    <string name="txt_username_placeholder">Username</string>
+    <string name="txt_username_placeholder">Name</string>
 
     <!-- Edit Profile -->
     <string name="EditProfile">Edit Profile</string>
