Det vises nå navn først og epost under i nav drawer headeren ved innlogget bruker. Når brukeren ikke er logget inn skal jeg fikse det slik at det blir en knapp for "Login"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="system">SYSTEM</string>
     <string name="label">HeiDetteErEtHint</string>
     <string name="txt_email_placeholder">User not logged in</string>
-    <string name="txt_navname_placeholder">Login</string>
+    <string name="txt_navname_placeholder"></string>
 
 
     <!-- Login/Register -->
