--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
 
     <!-- Edit Profile -->
     <string name="EditProfile">Edit Profile</string>
+    <string name="change_profile_picture">Change profile picture</string>
 
 
     <!-- Intro Slider -->
