Kan laste opp profilbilde til database, og det vises på alle activities som har mulighet for det. Navn vises på alle activities som har mulighet for det. Og Funksjonalitet for å legge til navn gjennom EditProfileActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,10 @@
     <!-- Edit Profile -->
     <string name="EditProfile">Edit Profile</string>
     <string name="change_profile_picture">Change profile picture</string>
+    <string name="custom_name_texthint">Enter to assign a custom name</string>
+    <string name="custom_name_placeholder">Custom name</string>
+    <string name="save_information">Save information</string>
+
 
 
     <!-- Intro Slider -->
