--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
 
     <!-- Profile -->
     <string name="Profile">Profile</string>
-    <string name="txt_name_placeholder">Name</string>
+    <string name="txt_name_placeholder">No name set</string>
     <string name="txt_profileemail_placeholder">Email</string>
     <string name="task_count">Tasks</string>
     <string name="achievements_count">Achievements</string>
