--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="label">HeiDetteErEtHint</string>
     <string name="txt_email_placeholder">Please login</string>
     <string name="txt_navname_placeholder">User not logged in</string>
+    <string name="placeholder_customName">Assign custom name</string>
+
 
 
     <!-- Login/Register -->
