--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="txt_profileemail_placeholder">Email</string>
     <string name="task_count">Tasks</string>
     <string name="achievements_count">Achievements</string>
+    <string name="profile_email">Email</string>
 
     <!-- Edit Profile -->
     <string name="EditProfile">Edit Profile</string>
@@ -64,6 +65,7 @@
     <string name="custom_name_texthint">Enter to assign a custom name</string>
     <string name="custom_name_placeholder">Custom name</string>
     <string name="save_information">Save information</string>
+    <string name="fab_editprofile">FAB_editprofile</string>
 
 
     <!-- Intro Slider -->
@@ -137,7 +139,6 @@
     <string name="ach_unlockedAchievements_desc">A tab that will show all the unlocked achievements</string>
     <string name="ach_lockedAchievements_desc">A tab that will show all the locked achievements</string>
     <string name="category_icon_description">Image representing a category</string>
-    <string name="fab_editprofile">FAB_editprofile</string>
 
 
 </resources>
