--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,6 +133,9 @@
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="input">Input</string>
+    <string name="category_icon_description">Image representing a category</string>
+    <string name="emptyMainText">You have no current tasks. Why don\'t you hit that button to get started?</string>
+    <string name="noDetailsText">No details were added for this task.</string>
 
     <string-array name="categories">
         <item></item>
@@ -151,8 +154,5 @@
     <string name="ach_lockedAchievements">Locked achievements</string>
     <string name="ach_unlockedAchievements_desc">A tab that will show all the unlocked achievements</string>
     <string name="ach_lockedAchievements_desc">A tab that will show all the locked achievements</string>
-    <string name="category_icon_description">Image representing a category</string>
-    <string name="emptyMainText">You have no current tasks. Why don\'t you hit that button to get started?</string>
-
 
 </resources>
